# infinity-plugin

./: .clang-format  .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  HISTORY  LICENSE  Makefile.am  NEWS  PLANS  README  README-CentOS.md  README.md  REPORT-BUGS  TODO  autogen.sh  config.h.in  configure.ac  index.html  meson.build  meson_options.txt  params.json
.github/workflows/: clang-format-check.yml
attic/: ChangeLog  NEWS
minidocs/: Makefile.am  controlkeys.md  meson.build
po/: ChangeLog  POTFILES.in  es.po  es_AR.gmo  infinity.pot
src/: Makefile.am  audacious.cc  compute.c  compute.cc  compute.cpp  compute.h  config-dialog.c  config-dialog.h  cputest.c  cputest.h  display.c  display.cc  display.h  effects.c  effects.h  gettext.h  infconfig.c  infconfig.h  infinite_states  infinity.c  infinity.cc  infinity.h  input.h  main.c  main.c.orig  main.cc  maintest.c  meson.build  mmx.h  music-player.h  prefs.c  prefs.h  renderer.c  renderer.cc  renderer.h  rhythmbox.c  spectrum.c  types.h  ui.h  ui_gtk.cc  (+1 more)
